<resources>
    <string name="main_app_name">Agencia EMD</string>
    <string name="main_slogan">E-Marketing Developer</string>
    <string name="main_description">Somos un equipo de profesionales curiosos, creativos y
        apasionados por el marketing. Disfrutamos lo que mejor sabemos hacer: Planear, crear y
        comunicar en canales digitales. Nuestros pilares son: Innovación, compromiso, trabajo en
        equipo, responsabilidad y pasión por los proyectos de nuestros clientes.
    </string>
    <string name="main_about_us">Conócenos</string>
    <string name="main_web_address">http://agenciaemd.com</string>
    <string name="main_call_us">Llámanos</string>
    <string name="main_cellphone">+57 322-946-7440
        \nLunes a Sábado
        \n8:30am a 6:00pm
    </string>
    <string name="main_write_us">Escríbenos</string>
    <string name="main_email">hola@agenciaemd.com</string>
    <string name="main_find_us">Encuéntranos</string>
    <string name="main_address">Carrera 11 # 21 - 90
        \nOficina 312
        \nSogamoso, Boyacá
    </string>
    <string name="main_tejo">Puntaje Tejo</string>
    <string name="main_tejo_text">Registra el puntaje del deporte
        \nícono de nuestra región
    </string>
    <string name="main_test">Test Estrategia Digital</string>
    <string name="main_test_text">Conoce el estado de tu empresa en cuanto
        \nal uso estratégico de plataformas digitales
    </string>
    <string name="main_music_button">Música Regional</string>
    <string name="main_music_text">Escucha los himnos más emblemáticos\nde nuestra región</string>
    <string name="main_tour_guide_button">Conoce Boyacá</string>
    <string name="main_tour_guide_text">Encuentra los lugares más interesantes
        \npara conocer en nuestro departamento
    </string>
    <string name="tejo_counter_activity_label">Puntaje Tejo</string>
    <string name="tejo_counter_team_a">Equipo A</string>
    <string name="tejo_counter_team_b">Equipo B</string>
    <string name="tejo_counter_game_over">El juego ha terminado. Uno de los equipos ha alcanzado los
        27 puntos.
    </string>
    <string name="tejo_counter_monona_text">Moñona</string>
    <string name="tejo_counter_embocinada_text">Embocinada</string>
    <string name="tejo_counter_mecha_text">Mecha</string>
    <string name="tejo_counter_mano_text">Mano</string>
    <string name="tejo_counter_winner">¡Ganador!</string>
    <string name="tejo_counter_undo">Deshacer</string>
    <string name="tejo_counter_share">Compartir</string>
    <string name="tejo_counter_reset">Reiniciar</string>
    <string name="tejo_counter_email_subject">Puntaje Partido de Tejo</string>
    <string name="tejo_counter_body_part_one">Puntaje Equipo A:</string>
    <string name="tejo_counter_body_part_two">\n\nPuntaje Equipo B:</string>
    <string name="tejo_counter_body_part_three">\n\nGracias por preferirnos, \n\nAgencia de
        Marketing EMD
    </string>
    <string name="tejo_counter_error_email">Se necesita una aplicación de correo electrónico para
        compartir el puntaje.
    </string>
    <string name="test_main_activity_label">Test Estrategia Digital</string>
    <string name="test_main_end">Terminar</string>
    <string name="test_main_company_name">Nombre de tu Empresa</string>
    <string name="test_main_characters_limit">[Máximo 40 caracteres]</string>
    <string name="test_main_question_one_header">Pregunta 1 de 10</string>
    <string name="test_main_question_one_body">Si cuentas con un sitio web, selecciona cada una de
        las funcionalidades con las que este cuenta, de lo contrario salta a la pregunta cuatro (4):
    </string>
    <string name="test_main_question_one_option_one">Ventas</string>
    <string name="test_main_question_one_option_two">Marketing y promoción (Anuncios sobre ofertas,
        suscriptores a la página, promociones especiales)
    </string>
    <string name="test_main_question_one_option_three">Blogging (Publicación periódica de
        información o contenido valioso para el público objetivo)
    </string>
    <string name="test_main_question_one_option_four">Anuncios o servicios de terceros integrados
        (Google AdSense, Amazon Associates, Infolinks, etc.)
    </string>
    <string name="test_main_question_two_header">Pregunta 2 de 10</string>
    <string name="test_main_question_two_body">¿Sientes que tu sitio web tiene un impacto positivo
        significativo en las áreas de marketing y ventas de tu empresa?
    </string>
    <string name="test_main_question_two_option_one">Sí</string>
    <string name="test_main_question_two_option_two">No</string>
    <string name="test_main_question_three_header">Pregunta 3 de 10</string>
    <string name="test_main_question_three_body">¿Realizas campañas publicitarias o de promoción
        para posicionar la página web en motores de búsqueda, o en páginas de terceros?
    </string>
    <string name="test_main_question_three_option_one">Sí</string>
    <string name="test_main_question_three_option_two">No</string>
    <string name="test_main_question_four_header">Pregunta 4 de 10</string>
    <string name="test_main_question_four_body">Si haces uso de redes sociales, señala en cuáles
        plataformas haces gestión activa (entiéndase como publicación de contenido relevante de
        manera continua, contacto con clientes potenciales y actuales, y como herramienta de
        comunicación en general), de lo contrario salta a la pregunta ocho (8):
    </string>
    <string name="test_main_question_four_option_one">Facebook</string>
    <string name="test_main_question_four_option_two">Instagram</string>
    <string name="test_main_question_four_option_three">YouTube</string>
    <string name="test_main_question_four_option_four">Twitter</string>
    <string name="test_main_question_four_option_five">LinkedIn</string>
    <string name="test_main_question_four_option_six">Otras (Pinterest, Snapchat, Flickr, etc.)
    </string>
    <string name="test_main_question_five_header">Pregunta 5 de 10</string>
    <string name="test_main_question_five_body">Señala cuáles de las siguientes acciones llevas a
        cabo en tus cuentas de redes sociales:
    </string>
    <string name="test_main_question_five_option_one">Ventas</string>
    <string name="test_main_question_five_option_two">Marketing y promoción (Anuncios sobre ofertas
        y promociones especiales, concursos, etc.)
    </string>
    <string name="test_main_question_five_option_three">Publicación de contenido afín con tu
        audiencia objetivo para ganar seguidores y aumentar la conexión con la marca
    </string>
    <string name="test_main_question_five_option_four">Utilización de servicios como el chat para
        mantenerte en contacto con tus clientes
    </string>
    <string name="test_main_question_six_header">Pregunta 6 de 10</string>
    <string name="test_main_question_six_body">¿Consideras que el uso de redes sociales tiene un
        impacto positivo significativo sobre las áreas de marketing y ventas de tu empresa?
    </string>
    <string name="test_main_question_six_option_one">Sí</string>
    <string name="test_main_question_six_option_two">No</string>
    <string name="test_main_question_seven_header">Pregunta 7 de 10</string>
    <string name="test_main_question_seven_body">¿Realizas campañas publicitarias pagas u orgánicas
        (no pagas) dentro de tus redes sociales para posicionar y exponer tu negocio?
    </string>
    <string name="test_main_question_seven_option_one">Sí</string>
    <string name="test_main_question_seven_option_two">No</string>
    <string name="test_main_question_eight_header">Pregunta 8 de 10</string>
    <string name="test_main_question_eight_body">Si cuentas con aplicaciones móviles ¿En qué
        plataformas tienes publicadas dichas herramientas? De lo contrario, por favor presiona el
        botón \"Terminar\" para obtener tus resultados:
    </string>
    <string name="test_main_question_eight_option_one">Google Play Store</string>
    <string name="test_main_question_eight_option_two">Apple App Store</string>
    <string name="test_main_question_eight_option_three">Windows Store</string>
    <string name="test_main_question_eight_option_four">Amazon App Store</string>
    <string name="test_main_question_eight_option_five">BlackBerry World</string>
    <string name="test_main_question_eight_option_six">Galaxy Store</string>
    <string name="test_main_question_nine_header">Pregunta 9 de 10</string>
    <string name="test_main_question_nine_body">¿Con qué funcionalidades cuentan dichas aplicaciones
        móviles?
    </string>
    <string name="test_main_question_nine_option_one">Ventas</string>
    <string name="test_main_question_nine_option_two">Marketing y promoción (Anuncios sobre ofertas,
        suscriptores, promociones especiales)
    </string>
    <string name="test_main_question_nine_option_three">Blogging (Publicación periódica de
        información/contenido valioso para el público objetivo)
    </string>
    <string name="test_main_question_nine_option_four">Anuncios o servicios de terceros integrados
        (Google AdMob, Unity Ads, Chartboost, etc.)
    </string>
    <string name="test_main_question_ten_header">Pregunta 10 de 10</string>
    <string name="test_main_question_ten_body">Consideras que dichas aplicaciones tienen un impacto
        positivo significativo sobre las áreas de marketing y ventas de tu empresa?
    </string>
    <string name="test_main_question_ten_option_one">Sí</string>
    <string name="test_main_question_ten_option_two">No</string>
    <string name="test_results_activity_label">Resultados</string>
    <string name="test_results_to">Señores</string>
    <string name="test_results_company_name_hint">[Nombre de tu Empresa]</string>
    <string name="test_results_score">Puntaje:</string>
    <string name="test_results_total_score">de 100 puntos</string>
    <string name="test_results_send">Enviar</string>
    <string name="test_results_reset">Reiniciar</string>
    <string name="test_results_back">Volver</string>
    <string name="test_results_toast">¡Gracias!</string>
    <string name="music_main_layout_lyrics">Letra: </string>
    <string name="music_main_layout_music">Música: </string>
    <string name="music_main_song_one_name">Himno de Colombia</string>
    <string name="music_main_song_one_lyrics_composer">Rafael Núñez</string>
    <string name="music_main_song_one_music_composer">Oreste Síndici</string>
    <string name="music_player_helper_back">Volver</string>
    <string name="music_player_helper_play">Reproducir</string>
    <string name="music_player_helper_reset">Reiniciar</string>
    <string name="music_player_start_time" translatable="false">00:00</string>
    <string name="tour_guide_main_location_tunja_short_description">Iglesias, historia, coventos y
        monumentos
    </string>
    <string name="tour_guide_main_location_tunja_long_description">Tunja es un municipio colombiano,
        capital del departamento de Boyacá, situado sobre la cordillera oriental de los Andes a 115
        km al noreste de Bogotá. Es la ciudad capital más alta del país. Tunja fue construida sobre
        Hunza, una de las capitales de la confederación Muisca el 6 de agosto de 1539. Con su título
        de ciudad otorgado por la corona española, Tunja llegó a convertirse en un fortín para
        colonos emigrantes de Castilla, Extremadura y Andalucía, y uno de los mayores centros
        administrativos, judiciales, políticos y culturales del país. Durante el agitado periodo de
        la independencia, se constituyó como capital de la recién creada República de Tunja el 9 de
        diciembre de 1811.
    </string>
    <string name="tour_guide_detail_credits_one">Contenido adaptado de</string>
</resources>