<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/main_app_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="16dp" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_slogan"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:maxWidth="200dp"
            android:src="@drawable/img_logo_emd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtitle" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            android:text="@string/main_description"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <Button
            android:id="@+id/btn_test"
            style="@style/MainButtonsStyle"
            android:drawableLeft="@drawable/ic_test"
            android:onClick="goToTestActivity"
            android:text="@string/main_test"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/quiz_text"
            style="@style/MainTextBelowButtonsStyle"
            android:text="@string/main_test_text"
            app:layout_constraintLeft_toLeftOf="@id/btn_test"
            app:layout_constraintRight_toRightOf="@id/btn_test"
            app:layout_constraintTop_toBottomOf="@id/btn_test" />

        <Button
            android:id="@+id/web_button"
            style="@style/MainButtonsStyle"
            android:drawableLeft="@drawable/ic_internet"
            android:text="@string/main_about_us"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/find_us_button"
            app:layout_constraintTop_toBottomOf="@id/quiz_text" />

        <TextView
            android:id="@+id/web_address"
            style="@style/MainTextBelowButtonsStyle"
            android:text="@string/main_web_address"
            app:layout_constraintLeft_toLeftOf="@id/web_button"
            app:layout_constraintRight_toRightOf="@id/web_button"
            app:layout_constraintTop_toBottomOf="@id/web_button" />

        <Button
            android:id="@+id/call_us_button"
            style="@style/MainButtonsStyle"
            android:layout_width="0dp"
            android:drawableLeft="@drawable/ic_call"
            android:text="@string/main_call_us"
            app:layout_constraintLeft_toLeftOf="@id/web_button"
            app:layout_constraintRight_toRightOf="@id/web_button"
            app:layout_constraintTop_toBottomOf="@id/web_address" />

        <TextView
            android:id="@+id/phone_number"
            style="@style/MainTextBelowButtonsStyle"
            android:text="@string/main_cellphone"
            app:layout_constraintLeft_toLeftOf="@id/call_us_button"
            app:layout_constraintRight_toRightOf="@id/call_us_button"
            app:layout_constraintTop_toBottomOf="@id/call_us_button" />

        <Button
            android:id="@+id/email_button"
            style="@style/MainButtonsStyle"
            android:layout_width="0dp"
            android:drawableLeft="@drawable/ic_envelope"
            android:text="@string/main_write_us"
            app:layout_constraintLeft_toLeftOf="@id/find_us_button"
            app:layout_constraintRight_toRightOf="@id/find_us_button"
            app:layout_constraintTop_toBottomOf="@id/quiz_text" />

        <TextView
            android:id="@+id/email_address"
            style="@style/MainTextBelowButtonsStyle"
            android:text="@string/main_email"
            app:layout_constraintLeft_toLeftOf="@id/email_button"
            app:layout_constraintRight_toRightOf="@id/email_button"
            app:layout_constraintTop_toBottomOf="@id/email_button" />

        <Button
            android:id="@+id/find_us_button"
            style="@style/MainButtonsStyle"
            android:drawableLeft="@drawable/ic_placeholder"
            android:text="@string/main_find_us"
            app:layout_constraintLeft_toRightOf="@id/web_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_address" />

        <TextView
            android:id="@+id/lbl_address"
            style="@style/MainTextBelowButtonsStyle"
            android:text="@string/main_address"
            app:layout_constraintLeft_toLeftOf="@id/find_us_button"
            app:layout_constraintRight_toRightOf="@id/find_us_button"
            app:layout_constraintTop_toBottomOf="@id/find_us_button" />

        <Button
            android:id="@+id/btn_tour_guide"
            style="@style/MainButtonsStyle"
            android:layout_width="0dp"
            android:drawableLeft="@drawable/ic_map"
            android:text="@string/main_tour_guide_button"
            app:layout_constraintLeft_toLeftOf="@id/btn_test"
            app:layout_constraintRight_toRightOf="@id/btn_test"
            app:layout_constraintTop_toBottomOf="@id/lbl_address" />

        <TextView
            android:id="@+id/lbl_tour_guide"
            style="@style/MainTextBelowButtonsStyle"
            android:text="@string/main_tour_guide_text"
            app:layout_constraintLeft_toLeftOf="@id/btn_tour_guide"
            app:layout_constraintRight_toRightOf="@id/btn_tour_guide"
            app:layout_constraintTop_toBottomOf="@id/btn_tour_guide" />

        <Button
            android:id="@+id/btn_music_menu"
            style="@style/MainButtonsStyle"
            android:layout_width="0dp"
            android:drawableLeft="@drawable/ic_music"
            android:text="@string/main_music_button"
            app:layout_constraintLeft_toLeftOf="@id/btn_test"
            app:layout_constraintRight_toRightOf="@id/btn_test"
            app:layout_constraintTop_toBottomOf="@id/lbl_tour_guide" />

        <TextView
            android:id="@+id/lbl_music_menu"
            style="@style/MainTextBelowButtonsStyle"
            android:text="@string/main_music_text"
            app:layout_constraintLeft_toLeftOf="@id/btn_music_menu"
            app:layout_constraintRight_toRightOf="@id/btn_music_menu"
            app:layout_constraintTop_toBottomOf="@id/btn_music_menu" />

        <Button
            android:id="@+id/tejo_button"
            style="@style/MainButtonsStyle"
            android:layout_width="0dp"
            android:drawableLeft="@drawable/ic_scoreboard"
            android:onClick="goToTejoActivity"
            android:text="@string/main_tejo"
            app:layout_constraintLeft_toLeftOf="@id/btn_test"
            app:layout_constraintRight_toRightOf="@id/btn_test"
            app:layout_constraintTop_toBottomOf="@id/lbl_music_menu" />

        <TextView
            android:id="@+id/text_tejo"
            style="@style/MainTextBelowButtonsStyle"
            android:text="@string/main_tejo_text"
            app:layout_constraintLeft_toLeftOf="@id/tejo_button"
            app:layout_constraintRight_toRightOf="@id/tejo_button"
            app:layout_constraintTop_toBottomOf="@id/tejo_button" />

        <TextView
            android:id="@+id/lbl_copyright"
            style="@style/MainCopyrightTextViewStyle"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_tejo"
            tools:text="[Copyright]" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>