<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/song_picture"
            style="@style/SongPictureStyle"
            android:maxWidth="150dp"
            tools:src="@drawable/img_colombia_flag" />

        <TextView
            android:id="@+id/song_name"
            style="@style/SongNameStyle"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:textAppearanceSmall"
            tools:text="@string/music_main_song_one_name" />

        <LinearLayout style="@style/SongHorizontalLinearLayoutsStyle">

            <TextView
                style="@style/SongSmallTextViewsStyle"
                android:text="@string/music_main_layout_lyrics" />

            <TextView
                android:id="@+id/song_lyrics_composer"
                style="@style/SongSmallTextViewsStyle"
                android:singleLine="true"
                tools:text="@string/music_main_song_one_lyrics_composer" />
        </LinearLayout>

        <LinearLayout style="@style/SongHorizontalLinearLayoutsStyle">

            <TextView
                style="@style/SongSmallTextViewsStyle"
                android:text="@string/music_main_layout_music" />

            <TextView
                android:id="@+id/song_music_composer"
                style="@style/SongSmallTextViewsStyle"
                android:singleLine="true"
                tools:text="@string/music_main_song_one_music_composer" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
