<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MusicPlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/song_name"
            style="@style/SongNameStyle"
            android:layout_margin="16dp"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="@string/music_main_song_one_name" />

        <LinearLayout style="@style/MusicPlayerHorizontalLinearLayoutsStyle">

            <TextView
                style="@style/MusicPlayerTextViewsStyle"
                android:text="@string/music_main_layout_lyrics" />

            <TextView
                android:id="@+id/song_lyrics_composer"
                style="@style/MusicPlayerTextViewsStyle"
                android:singleLine="true"
                tools:text="@string/music_main_song_one_lyrics_composer" />
        </LinearLayout>

        <LinearLayout style="@style/MusicPlayerHorizontalLinearLayoutsStyle">

            <TextView
                style="@style/MusicPlayerTextViewsStyle"
                android:text="@string/music_main_layout_music" />

            <TextView
                android:id="@+id/song_music_composer"
                style="@style/MusicPlayerTextViewsStyle"
                android:singleLine="true"
                tools:text="@string/music_main_song_one_music_composer" />

        </LinearLayout>

        <ImageView
            android:id="@+id/song_picture"
            style="@style/SongPictureStyle"
            android:layout_gravity="center_horizontal"
            android:maxWidth="195dp"
            tools:src="@drawable/img_colombia_flag" />

        <SeekBar
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            tools:progress="20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/timer_left"
                style="@style/MusicPlayerSongTimerStyle"
                android:gravity="start"
                android:text="@string/music_player_start_time"
                tools:text="00:25" />

            <TextView
                android:id="@+id/timer_right"
                style="@style/MusicPlayerSongTimerStyle"
                android:gravity="end"
                tools:text="01:49" />

        </LinearLayout>

        <LinearLayout
            style="@style/MusicPlayerHorizontalLinearLayoutsStyle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="0dp">

            <LinearLayout
                android:id="@+id/back_linear_layout"
                style="@style/MusicPlayerLinearLayoutsIconsStyle">

                <ImageView
                    style="@style/MusicPlayerIconsStyle"
                    android:src="@drawable/ic_back" />

                <TextView
                    style="@style/MusicPlayerHelperTextStyle"
                    android:text="@string/music_player_helper_back" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/play_pause_linear_layout"
                style="@style/MusicPlayerLinearLayoutsIconsStyle">

                <ImageView
                    android:id="@+id/play_pause_icon"
                    style="@style/MusicPlayerIconsStyle"
                    android:src="@drawable/ic_play" />

                <TextView
                    android:id="@+id/play_pause_helper"
                    style="@style/MusicPlayerHelperTextStyle"
                    android:text="@string/music_player_helper_play" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/reset_linear_layout"
                style="@style/MusicPlayerLinearLayoutsIconsStyle">

                <ImageView
                    style="@style/MusicPlayerIconsStyle"
                    android:src="@drawable/ic_reset" />

                <TextView
                    style="@style/MusicPlayerHelperTextStyle"
                    android:text="@string/music_player_helper_reset" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/lbl_copyright"
            style="@style/MainCopyrightTextViewStyle"
            android:layout_gravity="center"
            android:layout_marginTop="72dp"
            tools:text="[Copyright]" />

    </LinearLayout>

</ScrollView>