<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.TestMainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            app:helperText="@string/test_main_characters_limit">

            <EditText
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/test_main_company_name"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:maxLength="40"
                android:maxLines="1"
                app:backgroundTint="@color/colorAccent" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="8dp"
            android:drawableLeft="@drawable/ic_test"
            android:drawablePadding="8dp"
            android:onClick="goToTestResultsActivity"
            android:text="@string/test_main_end" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_of_questions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

</LinearLayout>